# ChangeLog for mail-mta/postfix
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.566 2015/02/03 06:44:22 eras Exp $

  03 Feb 2015; Eray Aslan <eras@gentoo.org> postfix-3.0.0_rc1.ebuild,
  postfix-3.1_pre20150201.ebuild:
  Remove elogs from postinst for no-longer-in-the-tree versions

*postfix-3.1_pre20150201 (03 Feb 2015)
*postfix-3.0.0_rc1 (03 Feb 2015)

  03 Feb 2015; Eray Aslan <eras@gentoo.org> +postfix-3.0.0_rc1.ebuild,
  +postfix-3.1_pre20150201.ebuild, -postfix-3.0_pre20150129.ebuild:
  Version bump

*postfix-3.0_pre20150129 (31 Jan 2015)

  31 Jan 2015; Eray Aslan <eras@gentoo.org> +postfix-3.0_pre20150129.ebuild,
  -postfix-2.12_pre20150120.ebuild:
  Version bump

  21 Jan 2015; Eray Aslan <eras@gentoo.org> -postfix-2.11.1-r1.ebuild,
  -postfix-2.11.1.ebuild, -postfix-2.11.2.ebuild:
  Remove old

*postfix-2.12_pre20150120 (21 Jan 2015)

  21 Jan 2015; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20150120.ebuild,
  -postfix-2.12_pre20141228.ebuild:
  Version bump

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> postfix-2.11.3.ebuild:
  Stable for sparc, wrt bug #531430

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> postfix-2.11.3.ebuild:
  Stable for ppc, wrt bug #531430

*postfix-2.12_pre20141228 (29 Dec 2014)

  29 Dec 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20141228.ebuild,
  -postfix-2.12_pre20141221.ebuild:
  Version bump

  28 Dec 2014; Aaron W. Swenson <titanofold@gentoo.org> postfix-2.10.2.ebuild,
  postfix-2.10.3.ebuild, postfix-2.10.4.ebuild, postfix-2.10.5.ebuild,
  postfix-2.11.1.ebuild, postfix-2.11.1-r1.ebuild, postfix-2.11.2.ebuild,
  postfix-2.11.3.ebuild, postfix-2.12_pre20141221.ebuild:
  Rename virtual/postgresql to dev-db/postgresql

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> postfix-2.11.3.ebuild:
  Stable for x86, wrt bug #531430

  23 Dec 2014; Agostino Sarubbo <ago@gentoo.org> postfix-2.11.3.ebuild: