@@ -11,35 +11,37 @@ DIST postfix-2.10.3.tar.gz 3828808 SHA256 7815d8ad88af76e0962f18bf1e80b1aa5a0d09
 DIST postfix-2.10.4.tar.gz 3829427 SHA256 e5233438420fbd6b49a64f007bd8da7dd046777436fb82dd50eadcd8901e7201 SHA512 619b6e2cfa0bd50148fe7ad7df09c13b9e5e8e43fe9331ce03010911f02b9daac16df863cc3ce604375f7e3ae076bf316fed7ffb6f424f873c869d3797d5c81f WHIRLPOOL c7b23975484383be1001f5da96a98614ac96f50c9083fff0986c8303933f51c673c1cd389dbaaa92c17b0f3c087f7979ef9d2a03cfa03c1d5f6c771554269cad
 DIST postfix-2.10.5.tar.gz 3830067 SHA256 3a172c1e892b951dfe3d4e703f49359a66b281b3ab7b4e987b6746d2992f623b SHA512 d11beac9fa7a1fe50b522d91975d493e485721596e7930051d9880947ca88e75468ad2036e0902e34b39f44d115c4492c2599bfca5477b28a39672109eda3b0e WHIRLPOOL 22935c2520d349c04a50c88d783fcc9d8ea69f8275f8ec62e7c12a484474e570f4ba2355ddb75edcc49dabe59c3ecb7b9fba95359b5cce4f521f0af666d11f5e
 DIST postfix-2.11.3.tar.gz 4039705 SHA256 04e5146e6e56261baae9f63c590348a4b12ce22d3d46260e26e97233f40802c3 SHA512 b371f1099b1e6e653242a9b4f3812b38b6a9145a4f4c1c9fa5bef6a02e1a9a8f4ec2979c8946f6c873e303ac54f5dd1a84b934eeea8169e2ce187028c36c857e WHIRLPOOL 7b639ae7a5d0bf16ec0c1568b6f1bb486ccf540ae75269d97be36135441513730d78449b29c99403c6876609ddcc676f5740683a963281f1b2481c33bd4cab8e
-DIST postfix-3.0.0-RC1.tar.gz 4240391 SHA256 3f7a4c1e74cd6f5a3742211abdd63b933cd7f4f75c3a20f0b35e32fc99349b00 SHA512 4423fb721fe272bfa2f70020bef401aac1ca31e8e11d260dc0b3e9f164479b4f5a4b9c003df762276a09eab52081e279e910d79b2585e6586be2fd75d91f7286 WHIRLPOOL c7e35327d5a8a5cb61ff0dcbf737f90228911c1ea2ad7d9f51ecbbe25de71133d3bd2ba89baac2cb13ea642c63cfeebec1f2891f7f1e4de8d3155ae70d98ef24
-DIST postfix-3.1-20150201.tar.gz 4278791 SHA256 41ccebd6f8c4b3a5159f4c2fe96e971b3d8aca3719ed72a919ae97de49f427b4 SHA512 74d531f2bfb1a02bbde0ad3d92e421fc357275cc9cb6d8556b9fdda47ba5c6518f5e3c262e86cc1324509f50bf041c31aac6a3e8e0ed079101eacdd8eb1cbae2 WHIRLPOOL b55fa3f6ba16e6c934bbe35f2633cb73405551afe7718a227c8d720a9ebe8ff4a3bb4fd81ebfb7854e5feed5d2fa130aa520001fdf04f99b508b72d5578a6aa5
+DIST postfix-2.11.4.tar.gz 4040104 SHA256 f4154c1db58c0300897d4c430bd90714ac7855249df59cc8828910fd5ccb031e SHA512 b9c0f065519367fb52c58eeeaed62996da7244c362e5ff9fa9fe5263a06a5fb99a3e30cdf044de0165976581e0bfad89681974ad1b3abbeaedb691db2c20336b WHIRLPOOL 3075c8ff2be9a47c769738f00169a799fe8f2531f21a88efc83e0be386636d9ee5d5a6b205a313e359e5913abe47943fdf264fb08f40173c5ede38427dbb880d
+DIST postfix-3.0.0.tar.gz 4239248 SHA256 c2f2f10aa3e6b7090ba979e9c515e42b3140c5c1c17a33d58787569df7ae0955 SHA512 ba5b67a8f03c6fe6bbb62e2aad981a6f3ba8266ea2fa93abfa5d31cdb20b2d5a47fc373f401b247ca2cb5a19e654f86b2a65fe906c102d729e472b6c5ff1cd7a WHIRLPOOL 1510a17f3376d77eb503b3adf47639f6466a38e20a06ebf7ae0ec6849dc2ea332377c82af816f298a2719bccc4917d14132ee9e11c14cbafa3ea53ec40056f50
+DIST postfix-3.1-20150208.tar.gz 4283031 SHA256 268527acf50f33bfd4456a10bd0664f89b99e6f83ae7c612f8c281281d926db6 SHA512 9ca43458661225536e5d6cfbe9338fe254056dc9b30953801df0c2a030064fe2cbcbf2c164cdfb228a6304fda6f73279caa5eb57ed44daf48cb935a6bbd0313f WHIRLPOOL ccf2dedf81c485a69c09366e8a94779d7ec8e0c45e73569245827bd4312fe69ed7e574876605de1e6dec3bc53b3321559fd78727b790379c33e70d9ebca86221
 DIST postfix-vda-v13-2.10.0.patch 55701 SHA256 6208021eb0b37ac6482e334e538ed5700cc22c4d4dd66ed9e975ae5f20bf935f SHA512 0b4b53a8cd28abf56eee3b2ed63ca1814251b60816e6ca1143249d25fd6ef7f905bec3134125ac6e851af685db8aae878012113693261529ae2ddbcf1bd93e62 WHIRLPOOL d98b7d2177b8b69738086880fd08c336fa60b99ff7413624e628fd5f17be2064f2ccaa37c047d3013ed41c0ff1bcb76e7962f8390c4179f28ab11733dd3b59d3
 EBUILD postfix-2.10.2.ebuild 9626 SHA256 e1eed601fffd00f97425d124ea682af9727c91dbc3652b0fd1ad94f2a912952f SHA512 5e93b23528d430702aa71b3bbea58606df320ff27bc3b57aac210c3a42746a30557d355f6b437efc86e2b88fc221089540863a592e8fc69a1bd12142c5acdd3d WHIRLPOOL 1d4469fae66d04214d92228f1150e2a82574ca18f31ea351dc8055ff15f0f87e6fc64cda52c4f956408bf82767b857935a924eecc3cdda55d76c07f695ba50f4
 EBUILD postfix-2.10.3.ebuild 9629 SHA256 37d37a4c736bb2489be86e1bc2270e7fd2d8e2155d05ef67f10d929beece5896 SHA512 3b3916c5ba2514f176626a8bb78e7bf53a5d960f45066903628a9a3e4f1140bff591f84f30baa66af5396e13aad39cc58be33b901c9ddb88b2ca10cc31a79bd3 WHIRLPOOL 7204a4e70ec610649d3e5769eb08949df54a3f080f17d84b24528ce41eeaa1351bac9188737e4617b817d5a245d76abe77c38f5db68d8e3ca8fed254681a77a6
 EBUILD postfix-2.10.4.ebuild 9679 SHA256 7ab4ce58ee3bda67cda9c99a7be313ee7b3893ec65e9d3d05986278e31d1d132 SHA512 0b53186370aca9c60fe42af1d6aa2e504c6d22e2e91d217bcb84c6027f3ea6871b2f4c5b613d38392e5d23bf1c441998ac53f27184a4666d75b292112397b578 WHIRLPOOL 850676f5057aa8bf73d0ddab235d504cff2668f445ee2d2d5912500abcc7a9f88407e9f65566b9a463ecc0dda087039b4da0f155194e78306e8fb4556714da9d
 EBUILD postfix-2.10.5.ebuild 9679 SHA256 7d21737d40e17b799eb440da62396e9f624febf30646f16846a8c80b7c40fee7 SHA512 1a291b24d3bcb63b3eb34e4fbcc8725a2c3244a9422950d1080ab19f704b2f1a9722f41b45b0df2bf2c4f297b21d92001dead1293023d42739907b82af8fe3b2 WHIRLPOOL adea5d903d71581439a4667f422bffdda74da11e12dc6b683fce47f1496fc51157bcfd2bd95094cadf086008e74dab6c867b0e73f76460feedcf9b41d7132db3
 EBUILD postfix-2.11.3.ebuild 9781 SHA256 6de9ddb9a04d522709124a3a8b7d1be57b31c2b52441e7f9bfde7bae3b1532fb SHA512 da80436e5949c857fedac81d1e13d49dcadff17e345dae7c3e14b9b85f8a73c75d637c8e7485ca58ea0c9d41041f881b709e6b55503fbc042293a60768edf624 WHIRLPOOL 31a97aaf6f0168e75bd7966ac10a41fee865fe08d8a74d599a077d56e1b8c0011ce727a018c8e160809529fcf1a61b4ba9cec2c9d4b109f9539f501874053b86
-EBUILD postfix-3.0.0_rc1.ebuild 8929 SHA256 bb0ec86d7c0ac909712c2add96ce513c3a7c2f889b7b8f94e1d198403a578912 SHA512 ceed36b6fcd6604456e017e4d6512c4e5247b7172a0c658cd108d34df4735867a1dc4d15f6157eca6b79fe4ee3a2d0d862bcb18bd57ea0b5ab88ef049a6fba68 WHIRLPOOL cf5b15f3cdbfe4cd1ca4d9c8801000db55acd72cae10b31dc30cc3558ecc1fbba5fbaf3358f02f63b5d2bc4744d897162a829539f11084262e7760c15581cd5e
-EBUILD postfix-3.1_pre20150201.ebuild 8938 SHA256 3e88587daa49542b79c65bf4f09312afb220f41fd641ab822773b6dc3d7560c8 SHA512 de0da24ce3bc53122ce483eae96b007f65f88272fdbb03874816e79756983215bbac699ad6a5dbd89ced2b97ec9a7b8382394606e9cbad3c8a2a3df5597df1d2 WHIRLPOOL a84eb28358b83f4326eff529898d994ce2f4120b5055c024476b305a64470fe37273d7e37852e5493cdf66c872309e1a598e62785e2f7b4889e52a973128d292
-MISC ChangeLog 13165 SHA256 de24737e9b64fa54129c7eade700518f042e33a24f4da634b1af687c63b0078d SHA512 286cc6b3c02cf99ba6a51b2408ae49f65e465ac8626da92d2e729e569e4ed043205a4be1705c1dc4aa54c81d15ec5637417a6d8ecf1def88a7e300dc92d66029 WHIRLPOOL fffcad043adb4d70dad13fc257743a8a0a9b27f7e9b28dbc09d119317bec2cc63b9ca099967f45bdf5c290f819a516a8fca4337b933d415da8f345ae5760c758
+EBUILD postfix-2.11.4.ebuild 9795 SHA256 163629654e4aca99b4118b6b3ec046d1d56e7b807fefcd3974477c7ac1eec5f0 SHA512 8b57ce3759092e17d078697d86b0b7afce1557fa484f4dffc7ac437fda0e68715b5c0d24f68d62555ecedde3c538c07b48f67b14cbaf51b2216068e3479e6077 WHIRLPOOL 500b0422ee1bb3029b5f5cf6e396918d9133d1097acb538017747e06e2947e30e90fd07ae2a37531a1471abbbd21c4028440e6858d9d8fed2e3c0ab5cd121ac7
+EBUILD postfix-3.0.0.ebuild 8944 SHA256 785b884768a15cc1e299cf032ce8ec37295d0cf61852b393fdf2f079b45b263d SHA512 0121c627fbf35ed7689d1940922adda028822a30bd188abcf9cdbe8ebd2ee2213fa4641ebf12a98547c8514ccdc8d9138f4810955b26b36e6ec4d9a1ae3e09b4 WHIRLPOOL 704da661f459eab15d7e24bd4c9407f4937cd943b0f00fde67e3a04e95a01256155318bb24726a1c5d48b588476ea9308c741842519a79cdd0bf892770f788a5
+EBUILD postfix-3.1_pre20150208.ebuild 8952 SHA256 6f71b6f517f8a1257dbcd081cd76278d243340da142e338bc0a6a1f15fe1f4c5 SHA512 0fd61f011fe03476f7ce0b43fca7b0dbc853233c17669678696892c3399678bd2aa9c2e3f6fd09bdb6845261b7811dfba322dd0f4d5b53b250600dded06ed658 WHIRLPOOL f611cd059f8e5276f61cea153604060e33d8bdf9f7f7c727d0f0215914a9c7864cd6635b4b3ae4122e4f7d60b2467b1019c9ddf29f0079085770fe18affb9807
+MISC ChangeLog 13468 SHA256 acf41990f712747334633fd467ccb0250eae21d6f72fb0cb057367cf397ccba5 SHA512 e38b1dbb50f74850ea04439df9cb798fda2419372f2bee3d25be185b7709a4ebd74a95628b2df79d5e2c020f5d103cb6b8170a1406842b24dd4c0f2401fdf72b WHIRLPOOL 33d7eeac309f8fce93574072cce5274c6a5c1c96f9876ac7dbe11fef3dfe1f3dc1d9ba2bc40d7fefe17a09a752af90a8fe9e3468d61f1cdcbdf266c511e52083
 MISC ChangeLog-2013 100301 SHA256 439e93c3f6ea08471888157d2347da51181aa9031d4bfdeef2197a6b26680246 SHA512 c678433163e86def50d59e47d7a1a0e8f4c4af860f80932255a7c95544e1f5b55a70b68905b02a417b2332bcf3aaa59281814d8504d70085f0874a23faa2bf02 WHIRLPOOL 15a12897a576cf98d856c551157b72b47aa45fd61d05c6ed55033ce37ce247045c6bcc8143b7ccce4666900d85e0a04087c977a311e31c20f554a991bec74fbc
 MISC metadata.xml 754 SHA256 52b30e7748a792a156ad44b46878b67cb1a359c882e03f76b1d7b3b0bf111129 SHA512 bef165b527524efdcabce97c2fc0735f784dfc014ae810294e6a19b534edc6a01e14e532d730c8b8c2b76c99dafac672074317ec6dc23942285ad27895fd7220 WHIRLPOOL 702d14bd15db16217c664a39534bd1b19774d5f6c5a4a2a43e6595f400c06332c56849fd0d722c7982f5c40398b4bb0b3398b96c6f370a57d99d323d0e84ab51
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU0G5IXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU2OJMXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRBQjk1NkM0NUMxNzFCRTY4Rjk4NENDMDk3
-N0YxRjE3NTU4NkEzQjFGAAoJEHfx8XVYajsfQZAQAKfZagucjtlviFzNnjii5HS6
-VzKoeQ0jgyP+letm4Zo+BWjY9VNSrmSu9khKuiM1PJU0bzRm3a3XXJjQ4kXOmKtH
-/LK9CJmVTeQdb0oHG7r/PRUGr9lmwwJom38Eonzk4GjQ/DNPXgJIVZEKsLKukVFh
-sfjusfoVRx+tZuK+POZmhbZs4a5Ws1dHLXcj7SYl1jmM4BIuGsndoPhr9ElMyDZv
-53PwOwuCgOQebOhmn2lEPzLyWu92K1PeNH3r1cyVMaheQT+FimkSUQcmef0R/oGB
-Fdxg2vvTJSwftOUB1GMtDJnHrMMo78kTYWLANSOrXWE3BMZgstS5x5V4JeYcZvoD
-vZ5pRt4aUapYnRR60nVEA0UTWFzyWSgXGuMlrBtSJ6epvbGbT/I90eUGRKClz5W4
-CzAczchPfEFKxFfKdWHLs/bZbgDV5TH8kbYAVC50Ggd96kMT2UrK9fhgqGNKx9of
-aaU2q3dtd0xVPO1QLY10nk2NphsQlWOccHvEnFMb/Is+ac9oo+5SRDEt6euWy+jq
-n9kjsxI3gRdV3PhEspMoMlLbC5ePmkKKJKWlpbZKYd66E8dUBI52JpuyAoCYREF+
-y29gnkweLzt2DMu4JGocHqM0RrQVtzkV8J7IEkNjoTR6mOPoNgdZQtPre3i18a5+
-/SqyhdCEW7Tx2oW9cWP+
-=CFw4
+N0YxRjE3NTU4NkEzQjFGAAoJEHfx8XVYajsfZq0QAIKO4GVqIMoBkKmx+C2xjAqa
+5ntH+7zdKxmXIPPkB3nUG+IzCj8Qd0vj+KvUCvXR6yJQecaQvkvcVorlG32kgjjD
+vhdWKWDrg935MxzzyR3Fug5TEEU8zE1NRFE+QMPbl3TWucKe2ABke6kQFEi1fNKe
+7YYCulqxeDNlfiotPwFkZzD/c4xRa8CbveK5bp8WKk4/MShP8/KiLVlUVAwXDfgd
+zBN6OSm9zk6pjKtewdo98vsz9IQDvZUzkXP0Z1UQUxxo/9CFW/m2kQnv4QYHZSX9
+xAmHAi02DmxVCl/F8LdrU5sIyNfvzLHn0O6c/WA/ru1UJ8Ql0FpGJYLQBwinrMB6
+O6HnpSn1qADlG6XA3+LY5Fdfq1y+uzxc9Bd1S+/mSwo11/eyE6oMoYzQTqaJH+i+
+eo3CAtMVP+69Xex1n07rQX2NoXRCX8Caz6gbGbTMvhnK4k9fI7mkttfT1iRyJ1/X
+vr/HvPPENCYqaSILZl2xhrhGHC6uVXhUsISF/Nn5xgD8ctOKLXXxnWP5t0/by181
+rSN+K2tkrJY+o2ARmszr6Sqmsi3wO6/53UeMcS87xIgrJERv8Gf6la9Pm1Ib1QQA
+PA6uIREchc5DILYSssSQ3BtAOKXAeSMHGbDYwz3UVX8TNPfJVSb5pmn1DvOG0yb1
+9A3u3NURraW8qHKiaGBE
+=dg8v
 -----END PGP SIGNATURE-----
